@@ -13,15 +13,16 @@
 #
 import itertools
 
+from conary import callbacks
 from conary import errors
 from conary import versions
+from conary import conaryclient
 from conary.conaryclient import ConaryClient, cmdline
 from conary.build.cook import signAbsoluteChangeset
 from conary.conarycfg import selectSignatureKey
 from conary.deps import deps
 
 def displayCloneJob(cs):
-    
     indent = '   '
     for csTrove in cs.iterNewTroveList():
         newInfo = str(csTrove.getNewVersion())
@@ -32,7 +33,8 @@ def displayCloneJob(cs):
         print "%sClone  %-20s (%s)" % (indent, csTrove.getName(), newInfo)
 
 def CloneTrove(cfg, targetBranch, troveSpecList, updateBuildInfo = True,
-               info = False, cloneSources = False):
+               info = False, cloneSources = False, message = None, 
+               test = False):
     client = ConaryClient(cfg)
     repos = client.getRepos()
 
@@ -69,15 +71,23 @@ def CloneTrove(cfg, targetBranch, troveSpecList, updateBuildInfo = True,
             seen.update(binaries)
 
         trovesToClone = list(set(trovesToClone))
+    if not client.cfg.quiet:
+        callback = conaryclient.callbacks.CloneCallback(client.cfg, message)
+    else:
+        callback = callbacks.CloneCallback()
 
     okay, cs = client.createCloneChangeSet(targetBranch, trovesToClone,
-                                           updateBuildInfo=updateBuildInfo)
+                                           updateBuildInfo=updateBuildInfo,
+                                           infoOnly=info, callback=callback)
     if not okay:
         return
 
     if cfg.interactive or info:
         print 'The following clones will be created:'
         displayCloneJob(cs)
+
+    if info:
+        return
 
     if cfg.interactive:
         print
@@ -88,5 +98,5 @@ def CloneTrove(cfg, targetBranch, troveSpecList, updateBuildInfo = True,
     sigKey = selectSignatureKey(cfg, str(targetBranch.label()))
     signAbsoluteChangeset(cs, sigKey)
 
-    if not info:
+    if not test:
         client.repos.commitChangeSet(cs)
